# CAP-Labs

hadoop-lab/: README.md  docker-compose.yml
hadoop-lab/scripts/: compile.sh
mpi/: CMakeLists.txt  README.md  e10-ring.c  e11-broadcast.c  e12-barrier.c  e13-scatter.c  e14-gather.c  e15-hibrido.c  e3-Bsend.c  e4-NBsendrec.c  e5-pi.c  e6-sum_reduce.c  e7-array_decomposition.c  e8-primos.c  e9-random.c
openmp/: .gitignore  README.md  exercise1.c  exercise10.c  exercise11.c  exercise12.c  exercise13.c  exercise14.c  exercise15.c  exercise16.c  exercise17.c  exercise18.c  exercise2.c  exercise3.c  exercise4.c  exercise5.c  exercise6.c  exercise7-1.c  exercise7-2.c  exercise7.c  exercise8.c  exercise9.c
par-python/multiproc/: exercise1-v2.py  exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5-applyasync.py  exercise5-poolapply.py  exercise5-poolmap.py  exercise5-ser.py  exercise6-async.py  exercise6.py  wordcount.py
par-python/multiproc/ex2/: script1.py  script2.py  script3.py
par-python/primos/: primes-parallel-map.py  primes-parallel-proc.py  primes-parallel-starmap.py  primes-parallel-th.py  primes-serial.py
par-python/pympi/: allreduce.py  bcast_array.py  ex1.py  ex10.py  ex11.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py  gather.py  helloworld.py  helloworld1.py  nbsendrec.py  reduce.py  scatter.py  sendrec.py
par-python/thread/: exercise10.py  exercise11.py  exercise12.py  exercise7.py  exercise8.py  exercise9.py
spark-lab/: README.md  compose.yaml
spark-lab/notebooks/: Apache Spark Streaming 2024.ipynb  CAP_Apache_Spark_Big_Data_EN-2024.ipynb  CAP_Spark_2024.ipynb
